# BetterKV

./: .gitignore  Cargo.toml  README.md  bench.html  bench.ts  seed.ts
crates/benchmark-cli/: Cargo.toml
crates/benchmark-cli/src/: args.rs  bench.rs  cli.rs  command.rs  connection.rs  main.rs  render.rs  report.rs  resp.rs  runner.rs  spec.rs
crates/benchmark-cli/src/benchmark/: model.rs  request.rs  runner.rs
crates/benchmark-cli/src/cli/: mod.rs
crates/benchmark-cli/src/resp/: encode.rs  io.rs  mod.rs
crates/benchmark-cli/src/workload/: mod.rs
crates/cli/: Cargo.toml
crates/commands/: Cargo.toml
crates/engine/: Cargo.toml
crates/justkv/: Cargo.toml
crates/justkv-cli/: Cargo.toml
crates/justkv-server/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/benches/: protocol.rs
crates/protocol/src/: encoder.rs  parser.rs  types.rs
crates/rehash/: Cargo.toml
crates/rehash/benches/: map.rs
crates/rehash/src/: constants.rs  index.rs  insert.rs  iter.rs  lib.rs  lookup.rs  node.rs  remove.rs  table.rs  tests.rs  types.rs
crates/server/: Cargo.toml
crates/test-cli/: Cargo.toml
crates/test-cli/src/: args.rs  client.rs  discovery.rs  main.rs  model.rs  output.rs  parser.rs  runner.rs  syntax.rs
crates/types/: Cargo.toml
src/: lib.rs  main.rs
src/commands/: connection.rs  dispatcher.rs  keyspace.rs  util.rs
src/config/: mod.rs
src/engine/: store.rs  value.rs
src/net/: connection.rs  listener.rs
src/protocol/: encoder.rs  parser.rs  types.rs
tests/: README.md  command_flow.rs  concurrency.rs  redis_api_surface.rs  ttl_and_incr.rs
tests/bitmaps/: setbit_getbit.rtest
tests/bloom/: bloom_filter.rtest
tests/cluster/: cluster_commands.rtest
tests/connection/: client_commands.rtest  connection_advanced.rtest  echo_select.rtest  ping.rtest
tests/countmin/: countmin_sketch.rtest
tests/cuckoo/: cuckoo_filter.rtest
tests/generic/: failover.rtest  rename.rtest  scan_commands.rtest
tests/geo/: geoadd_geodist.rtest
tests/hashes/: hash_expiry.rtest
tests/support/: mod.rs
www/: package.json  wrangler.jsonc
(+695 files in other folders)
