[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
types.workspace = true
bytes.workspace = true
itoa.workspace = true
ryu.workspace = true
thiserror.workspace = true
memchr.workspace = true
smallvec.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "protocol"
harness = false
