[package]
name = "rehash"
version.workspace = true
edition.workspace = true

[features]
profiling = ["profiler/enabled"]

[dependencies]
profiler.workspace = true
getrandom = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "map"
harness = false
