[package]
name = "betterkv-tester"
version.workspace = true
edition.workspace = true

[[bin]]
name = "betterkv-tester"
path = "src/main.rs"

[dependencies]
bytes.workspace = true
clap.workspace = true
indicatif = "0.18.4"
protocol.workspace = true
regex = "1.12.3"
shlex = "1.3.0"
tokio.workspace = true
